maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: expected class or object definition
def keephandonsidewall(){
^Escaper:16: error: Unmatched closing brace '}' ignored here
}
^